# arrow-udf

./: Cargo.toml
.github/workflows/: bench.yml
arrow-udf-duckdb-example/: Makefile  run_sqllogictest.py
arrow-udf-js/src/: jsarrow.rs  lib.rs
arrow-udf-python/src/: pyarrow.rs
arrow-udf-runtime/: Cargo.toml
arrow-udf-runtime/src/javascript/: mod.rs
arrow-udf-runtime/src/python/: interpreter.rs  mod.rs  pyarrow.rs
arrow-udf-runtime/tests/: wasm_build.rs
arrow-udf/arrow-udf-macros/src/: gen.rs
