[workspace]
resolver = "2"
members = [
  "arrow-udf",
  "arrow-udf/arrow-udf-macros",
  "arrow-udf-bench",
  "arrow-udf-example",
  "arrow-udf-runtime",
]
exclude = ["arrow-udf-duckdb-example"]

[workspace.dependencies]
anyhow = "1"
arrow-arith = "58.1.0"
arrow-array = "58.1.0"
arrow-buffer = "58.1.0"
arrow-cast = "58.1.0"
arrow-schema = "58.1.0"
arrow-select = "58.1.0"
arrow-ipc = "58.1.0"
arrow-data = "58.1.0"
arrow-flight = "58.1.0"
expect-test = "1"
serde_json = "1"
tokio = "1"

[workspace.package]
repository = "https://github.com/risingwavelabs/arrow-udf"
license = "Apache-2.0"
edition = "2021"
